# docs/swagger.json
@@ -230,6 +230,12 @@
         },
         "dto.PaginatedUsersDto": {
             "type": "object",
+            "required": [
+                "page",
+                "page_size",
+                "total",
+                "total_pages"
+            ],
             "properties": {
                 "data": {
                     "type": "array",
