# internal/model/dto/paginatedUsersDto.go
@@ -2,8 +2,8 @@ package dto
 
 type PaginatedUsersDto struct {
 	Data       []UserDto `json:"data"`
-	Total      int       `json:"total"`
-	Page       int       `json:"page"`
-	PageSize   int       `json:"page_size"`
-	TotalPages int       `json:"total_pages"`
+	Total      int       `json:"total" validate:"required"`
+	Page       int       `json:"page" validate:"required"`
+	PageSize   int       `json:"page_size" validate:"required"`
+	TotalPages int       `json:"total_pages" validate:"required"`
 }
